# ranger-agent-kit

./: .gitignore  README.md  requirements.txt  run_mcp_and_agent.sh
perps-mcp/: .env.example  README.md  USER_MANUAL.md  pyproject.toml  run_integration_with_tmux.sh
perps-mcp/src/ranger_mcp/: __main__.py  data.py  models.py  settings.py  sor.py
perps-mcp/tests/: test_integration.py  test_sor_endpoints.py
ranger-agent-examples/: README.md  agent.md
ranger-agent-examples/examples/: README.md  human_in_the_loop_agent.py  orchestrator_agent.py  planner_evaluator_agent.py
ranger-mcp-agent/: README.md
ranger-mcp-agent/examples/: mean_reversion_agent.py  single_tool_call_agent.py
ranger_mcp/: .gitignore
ranger_mcp/src/ranger_mcp/: __init__.py  __main__.py  data.py  sor.py
ranger_perps_mcp/: README.md  pyproject.toml
ranger_perps_mcp/src/ranger_mcp/: hub.py
src/ranger_mcp/: data.py  sor.py
